--- a/src/components/Layout/components/Header/Header.module.scss
+++ b/src/components/Layout/components/Header/Header.module.scss
@@ -1,4 +1,9 @@
 .wrapper {
+    --search-border-radius: 92px;
+    --search-height: 46px;
+    --search-top-spacer: 9px;
+    --search-button-width: 52px;
+
     height: var(--default-layout-header-height);
     box-shadow: 0px 1px 1px rgb(0 0 0 / 12%);
     display: flex;
@@ -9,5 +14,84 @@
 .inner {
     width: var(--default-layout-width);
     height: 100%;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
 }
+
+//.logo {
+
+//}
+
+.search {
+    width: 361px;
+    height: var(--search-height);
+    padding-left: 16px;
+    background-color: rgba(22, 24, 35, .06);
+    border-radius: var(--search-border-radius);
+    display: flex;
+    position: relative;
+    border: 1.5px solid transparent;
+
+    input {
+        color: var(--text-color);
+        font-size: 1.6rem;
+        background-color: transparent;
+        padding: 12px 0;
+        flex: 1;
+        caret-color: var(--primary);
+    }
+
+    input:not(:placeholder-shown) ~ .search-btn {
+        color: rgba(22, 24, 35, 1);
+    }
+
+    &::after {
+        content: "";
+        position: absolute;
+        top: var(--search-top-spacer);
+        right: var(--search-button-width);
+        width: 1px;
+        height: calc(var(--search-height) - var(--search-top-spacer) * 2);
+        background-color: rgba(22, 24, 35, .12);
+
+    }
+
+    &:focus-within {
+        border-color: rgba(22, 24, 35, .2);
+    }
+}
+
+.clear, 
+.loading {
+    position: absolute;
+    right: calc(var(--search-button-width) + 16px);
+    top: 50%;
+    transform: translateY(-50%);
+    color: rgba(22, 24, 35, .34);
+}
+
+.search-btn {
+    width: var(--search-button-width);
+    height: 100%;
+    font-size: 1.8rem;
+    border-top-right-radius: var(--search-border-radius);
+    border-bottom-right-radius: var(--search-border-radius);
+    color: rgba(22, 24, 35, .34);
+
+
+    &:hover {
+        background-color: rgba(22, 24, 35, 0.03);
+        cursor: pointer;
+    }
+
+    &:active {
+        background-color: rgba(22, 24, 35, 0.06);
+    }
+}
+
+//.action {
+
+//}
+
 
