--- a/src/components/Layout/components/Header/Header.module.scss
+++ b/src/components/Layout/components/Header/Header.module.scss
@@ -22,9 +22,12 @@
 //.logo {
 
 //}
+.search,
+.search-result {
+    width: 361px;
+}
 
 .search {
-    width: 361px;
     height: var(--search-height);
     padding-left: 16px;
     background-color: rgba(22, 24, 35, .06);
@@ -60,6 +63,12 @@
     &:focus-within {
         border-color: rgba(22, 24, 35, .2);
     }
+}
+.search-title {
+    font-size: 1.4rem;
+    font-weight: 600;
+    color: rgba(22, 24, 35, .5);
+    padding: 5px 12px;
 }
 
 .clear, 
