--- a/src/components/GlobalStyles/GlobalStyles.scss
+++ b/src/components/GlobalStyles/GlobalStyles.scss
@@ -5,6 +5,7 @@
     --primary: #fe2c55;
     --black: rgba(22, 24, 35, 1);
     --text-color: rgba(22, 24, 35, 1);
+    --white: #fff;
 
     // Default layout
     --default-layout-header-height: 60px;
@@ -13,7 +14,7 @@
 
 * {
     box-sizing: border-box;
-    margin: 0;
+    margin: 0; 
     padding: 0;
 }
 html {
