--- a/src/components/Button/Button.module.scss
+++ b/src/components/Button/Button.module.scss
@@ -28,6 +28,12 @@
     margin-left: 8px;
 }
 
+.icon {
+    width: 24px;
+    display: inline-block;
+    text-align: center;
+}
+
 .rounded {
     border-radius: 999px;
     box-shadow: 0 2px 8px rgb(0 0 0 /6%);
