--- a/src/components/Button/Button.module.scss
+++ b/src/components/Button/Button.module.scss
@@ -3,7 +3,8 @@
     align-items: center;
     justify-content: center;
     font-size: 1.6rem;
-    font-weight: 700;
+    font-weight: 600;
+    font-family: 'IBM Plex Sans', serif;
     min-width: 100px;
     padding: 9px 16px;
     border-radius: 4px;
